[gd_scene load_steps=9 format=3 uid="uid://chuti8pmchocr"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_wdwe3"]
[ext_resource type="Shader" path="res://Shaders/change_color.gdshader" id="3_13uas"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="3_t2yux"]
[ext_resource type="Script" path="res://Scripts/ColorPalette.gd" id="4_hhhkb"]
[ext_resource type="PackedScene" uid="uid://c76qekpnedfev" path="res://Scenes/spinning_enemy.tscn" id="5_dgalg"]

[sub_resource type="Environment" id="Environment_imqd3"]
background_mode = 3
glow_enabled = true
glow_hdr_threshold = 1.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r1ldr"]
emission_shape = 3
emission_box_extents = Vector3(1, 90, 0)
particle_flag_disable_z = true
gravity = Vector3(-980, 0, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ixaiv"]
shader = ExtResource("3_13uas")
shader_parameter/bright_color = Color(1, 1, 1, 1)
shader_parameter/dark_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_wdwe3")
enemy_can_spawn = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_imqd3")

[node name="CPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(360, 90)
amount = 10
process_material = SubResource("ParticleProcessMaterial_r1ldr")
metadata/_edit_lock_ = true

[node name="Bound" type="StaticBody2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bound" groups=["Boundary"]]
polygon = PackedVector2Array(0, 180, -22, 215, -22, -30, 399, -30, 399, 215, -22, 215, 0, 180, 360, 180, 360, 0, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(180, 90)
script = ExtResource("3_t2yux")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 0

[node name="ColorPalette" type="ColorRect" parent="Camera2D/CanvasLayer"]
material = SubResource("ShaderMaterial_ixaiv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_hhhkb")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(50, 90)

[node name="EnemySpawnPos" type="Node2D" parent="."]

[node name="Marker2D3" type="Marker2D" parent="EnemySpawnPos"]
position = Vector2(360, 30)

[node name="Marker2D2" type="Marker2D" parent="EnemySpawnPos"]
position = Vector2(360, 60)

[node name="Marker2D1" type="Marker2D" parent="EnemySpawnPos"]
position = Vector2(360, 90)

[node name="Marker2D4" type="Marker2D" parent="EnemySpawnPos"]
position = Vector2(360, 120)

[node name="Marker2D5" type="Marker2D" parent="EnemySpawnPos"]
position = Vector2(360, 150)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpinningEnemy" parent="." instance=ExtResource("5_dgalg")]
position = Vector2(267, 79)
